# rocon_mockup

./: README.md
dummy_scenario_uc26/: CMakeLists.txt  package.xml
dummy_scenario_uc26/launch/: uc26.launch
dummy_scenario_uc26/nodes/: agent.py  solution.py
dummy_scenario_uc26/services/: services
dummy_scenario_uc26/srv/: AddJob.srv
rocon_agent/: CMakeLists.txt  package.xml  setup.py
rocon_agent/launch/: all.launch  camera_m.launch  hydro.launch  kobuki.launch  turtle.launch
rocon_agent/nodes/: roconagent.py
rocon_agent/specs/: camera_m.agent  hydro.agent  kobuki.agent  turtle.agent
rocon_agent/src/rocon_agent/: __init__.py  agent.py
rocon_solution_msgs/: CMakeLists.txt  package.xml
rocon_solution_msgs/msg/: JobApplication.msg  JobPost.msg  JobPostList.msg  RoconAgent.msg  RoconJob.msg  RoconJobList.msg  RoconService.msg
rocon_solution_msgs/srv/: AddJobs.srv  AddService.srv  JobOffer.srv
rocon_solution_server/: CMakeLists.txt  package.xml  setup.py
rocon_solution_server/launch/: add_service.launch  cleaning_service.launch  delivery_service.launch  sensor_calibration.launch
rocon_solution_server/msg/: RoconAgentList.msg  RoconService.msg  RoconServiceList.msg
rocon_solution_server/nodes/: add_srv.py  legacy.py  s_manager.py  sol.py
rocon_solution_server/services/: Cleaning.service  DrinkDelivery.service  SensorCalibration.service
rocon_solution_server/src/rocon_solution_server/: __init__.py  brain.py  career_center.py  composer.py  service_handler.py  service_manager.py  solution.py  solution_mockup.py
solution_viewer/: index.html
solution_viewer/js/: utils.js
