<?xml version="1.0"?>
<package>
  <name>rocon_solution_server</name>
  <version>0.0.0</version>
  <description>The rocon_solution_server package. Mockup Fake eep ni da </description>

  <maintainer email="jihoonl@todo.todo">jihoonl</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/rocon_solution_server</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rocon_solution_msgs</run_depend>

</package>
